# Bigos

./: .clang-format  .gitignore  CMakeLists.txt  GenerateSln.bat  OpenSln.bat
CMakeScripts/: CompilerDefinitions.cmake  CompilerSettings.cmake  IncludeFiles.cmake  TargetProperties.cmake
Samples/BackendAPI/AnimatedTriangle/: AnimatedTriangle.cpp  AnimatedTriangle.h  Application.cpp  CMakeLists.txt  Sample.cpp  Sample.h  SampleHelper.h  main.cpp
Samples/BackendAPI/CMakeScripts/: SampleProperties.cmake
Samples/BackendAPI/DebugNormals/: Application.h  CMakeLists.txt  DebugNormals.cpp  DebugNormals.h  Sample.h  SampleHelper.h  main.cpp  normalShader.hlsl  solidShader.hlsl
Samples/BackendAPI/Fibonacci/: Application.cpp  CMakeLists.txt  Fibonacci.cpp  Fibonacci.h  Sample.h  SampleHelper.h  main.cpp  shader.hlsl
Samples/BackendAPI/IndirectCube/: CMakeLists.txt  IndirectCube.cpp  IndirectCube.h  main.cpp  shader.hlsl
Samples/BackendAPI/RotatedQuads/: Application.cpp  Application.h  CMakeLists.txt  RotatedQuads.cpp  RotatedQuads.h  Sample.cpp  main.cpp  shader.hlsl
Samples/BackendAPI/SampleTemplate/: Application.cpp  Application.h  CMakeLists.txt  OverwrittenSample.h  OverwrittenSamples.cpp  Sample.cpp  Sample.h  main.cpp
Samples/BackendAPI/TexturedQuad/: Application.cpp  CMakeLists.txt  SampleHelper.h  TexturedQuad.cpp  TexturedQuad.h  main.cpp  shader.hlsl
Samples/BackendAPI/Triangle/: Application.cpp  CMakeLists.txt  Sample.h  SampleHelper.h  Triangle.cpp  Triangle.h  main.cpp  shader.hlsl
Samples/BackendAPI/VertexlessTriangle/: Application.cpp  Application.h  CMakeLists.txt  Sample.h  VertexlessTriangle.cpp  VertexlessTriangle.h  main.cpp  shader.hlsl
Samples/CMakeScripts/: SampleProperties.cmake
Samples/DraftSandbox/: CMakeLists.txt  main.cpp
Sandbox/: CMakeLists.txt  DemoLayer.cpp  DemoLayer.h  Sandbox.cpp
include/BIGOS/: Application.h  BIGOS.h  BigosEngine.h  Config.h  EntryPoint.h
include/BIGOS/Renderer/: Renderer.h
include/BigosEngine/: Application.h  BigosTypes.h  EntryPoint.h  Layer.h  LayerStack.h
include/BigosEngine/Renderer/: Renderer.h
include/BigosFramework/: BigosFramework.h  Config.h
include/Core/: CoreDependencies.h  CoreTypes.h
include/Core/Memory/: IAllocator.h  Memory.h  Memory.inl  MemorySystem.h  MemoryTypes.h  SystemHeapAllocator.h
include/Core/Utils/: String.h  String.inl  Timer.h  Timestep.h
include/Driver/Backend/: API.h  APICommon.h  APIHandles.h  APITypes.h
include/Driver/Frontend/: Buffer.h  ComputeContext.h  Context.h  Contexts.h  CopyContext.h  Device.h  DriverSystem.h  DriverSystemTypes.h  GraphicsContext.h  Pipeline.h  RenderDevice.h  RenderPass.h  RenderSystem.h  RenderSystemTypes.h  RenderTarget.h  ResourceState.h  Swapchain.h  SyncSystem.h  Texture.h
include/Driver/Frontend/Camera/: Camera.h
include/Driver/Frontend/Shader/: IShaderCompiler.h  Shader.h
include/Platform/: Platform.h  PlatformTypes.h  Window.h  WindowSystem.h
include/Platform/Event/: ApplicationEvent.h  EventHandler.h  EventManager.h  EventSystem.h  EventTypes.h  IEvent.h  KeyEvent.h  MouseEvent.h
include/Platform/Input/: Input.h  InputSystem.h  KeyCodes.h  MouseCodes.h
include/Platform/Window/: Window.h  WindowSystem.h
src/BIGOS/: Application.cpp  BigosEngine.cpp  CMakeLists.txt
src/BIGOS/Renderer/: Renderer.cpp
src/BigosEngine/: Application.cpp  CMakeLists.txt  Layer.cpp  LayerStack.cpp
src/BigosEngine/Renderer/: Renderer.cpp
src/BigosFramework/: BigosFramework.cpp  CMakeLists.txt
src/Containers/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Memory/: MemorySystem.cpp  SystemHeapAllocator.cpp
src/Core/Utils/: String.cpp
src/Driver/: CMakeLists.txt
src/Driver/Backend/D3D12/: D3D12Adapter.cpp  D3D12Adapter.h  D3D12BindingAllocators.cpp  D3D12BindingAllocators.h  D3D12BindingHeapLayout.h  D3D12BindingSetLayout.h  D3D12CommandBuffer.cpp  D3D12CommandBuffer.h  D3D12Common.cpp  D3D12Common.h  D3D12Device.cpp  D3D12Device.h  D3D12Factory.cpp  D3D12Factory.h  D3D12Fence.h  D3D12Pipeline.h  D3D12PipelineLayout.h  D3D12Queue.cpp  D3D12Queue.h  D3D12Resource.h  D3D12ResourceView.h  D3D12Sampler.h  D3D12Shader.h  D3D12Swapchain.cpp  D3D12Swapchain.h  D3D12Types.h
src/Driver/Backend/Vulkan/: VulkanAdapter.cpp  VulkanAdapter.h  VulkanBindingHeap.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandLayout.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFactory.cpp  VulkanFactory.h  VulkanMemory.h  VulkanQueue.cpp  VulkanQueue.h  VulkanResource.h  VulkanResourceView.h  VulkanSampler.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTypes.h
src/Driver/Frontend/: Buffer.cpp  ComputeContext.cpp  Context.cpp  Contexts.cpp  CopyContext.cpp  Device.cpp  DriverSystem.cpp  GraphicsContext.cpp  Pipeline.cpp  RenderDevice.cpp  RenderPass.cpp  RenderSystem.cpp  RenderTarget.cpp  Swapchain.cpp  SyncSystem.cpp  Texture.cpp
src/Driver/Frontend/Camera/: Camera.cpp
src/Driver/Frontend/Shader/: Dxc.cpp  Dxc.h  Shader.cpp  ShaderCompilerFactory.cpp  ShaderCompilerFactory.h
src/Platform/: CMakeLists.txt  Window.cpp  WindowSystem.cpp
src/Platform/Event/: EventManager.cpp  EventSystem.cpp
src/Platform/Input/: InputSystem.cpp
src/Platform/Window/: Window.cpp  WindowSystem.cpp
